apps/redoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redoor
  namespace: default
spec:
  selector:
    app: redoor
  ports:
    - name: http
      protocol: TCP
      port: 7666
      targetPort: http
  type: ClusterIP
